--- a/assets/sass/components/_content.sass
+++ b/assets/sass/components/_content.sass
@@ -85,6 +85,10 @@
   margin-top: auto
   padding: 32px 0
 
+  // .footer p
+  p
+    padding-top: 2px
+
 .background
   // .background__core
   &__core
